--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -16,6 +16,8 @@
         <h1>{{ user.full_name }}</h1>
 
         <form>
+            <button class="btn btn-primary btn-sm" formaction="/users/{{ user.id }}/posts/new" formmethod="GET">Add
+                Post</button>
             <button class="btn btn-primary btn-sm" formaction="/users/{{ user.id }}/edit" formmethod="GET">Edit</button>
             <button class="btn btn-danger btn-sm" formaction="/users/{{ user.id }}/delete"
                 formmethod="POST">Delete</button>
